  to check for and handle errors correctly.

- Issue #4753: On compilers where it is supported, use "computed gotos" for
  bytecode dispatch in the interpreter. This improves interpretation
  performance.

- Issue #22939: Fixed integer overflow in iterator object.  Original patch by
  Clement Rouault.

- Issue #24102: Fixed exception type checking in standard error handlers.

Library
-------

- Issue #23319: Fix ctypes.BigEndianStructure, swap correctly bytes. Patch
  written by Matthieu Gautier.

- Issue #23254: Document how to close the TCPServer listening socket.
  Patch from Martin Panter.

- Issue #17527: Add PATCH to wsgiref.validator. Patch from Luca Sbardella.

- Issue #24613: Calling array.fromstring() with self is no longer allowed
  to prevent the use-after-free error.  Patch by John Leitch.

- Issue #24708: Fix possible integer overflow in strop.replace().

- Issue #24620: Random.setstate() now validates the value of state last element.

- Issue #13938: 2to3 converts StringTypes to a tuple. Patch from Mark Hammond.

- Issue #24611: Fixed compiling the posix module on non-Windows platforms
  without mknod() or makedev() (e.g. on Unixware).

- Issue #18684: Fixed reading out of the buffer in the re module.

- Issue #24259: tarfile now raises a ReadError if an archive is truncated
  inside a data segment.

- Issue #24514: tarfile now tolerates number fields consisting of only
  whitespace.

- Issue #20387: Restore semantic round-trip correctness in tokenize/untokenize
  for tab-indented blocks.

- Issue #24456: Fixed possible buffer over-read in adpcm2lin() and lin2adpcm()
  functions of the audioop module.  Fixed SystemError when the state is not a
  tuple.  Fixed possible memory leak.

- Issue #24481: Fix possible memory corruption with large profiler info strings
  in hotshot.

- Issue #24489: ensure a previously set C errno doesn't disturb cmath.polar().

- Issue #19543: io.TextIOWrapper (and hence io.open()) now uses the internal