@@ -34,6 +34,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #15138: Speed up base64.urlsafe_b64{en,de}code considerably.
+
 - Issue #23319: Fix ctypes.BigEndianStructure, swap correctly bytes. Patch
   written by Matthieu Gautier.
 
